--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
-}
+      "version": 2,
+      "builds": [
+        {
+          "src": "./server.js",
+          "use": "@vercel/node"
+        }
+      ],
+      "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+      ],
+      "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    }
